--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name":"Azurion-ECS",
+    "name":"yeoku",
     "version":"0.0.1",
     "description": "Entity Component System for javascript",
     "licence": "UNLICENSED",
@@ -7,10 +7,10 @@
     "private": false,
     "repository": {
         "type": "git",
-        "url": "https://github.com/episanchez/Azurion-ECS.git"
+        "url": "https://github.com/episanchez/yeoku.git"
     },
     "bugs": {
-        "url": "https://github.com/episanchez/Azurion-ECS/issues"
+        "url": "https://github.com/episanchez/yeoku/issues"
     },
     "dependencies":{
         "winston" : "2.1.1"
