--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "should": "3.3.1",
     "mocha": ">=0.0.1",
     "gulp" : "3.9.1",
-    "gulp-jsdoc3": "0.2.0"
+    "gulp-jsdoc3": "0.2.0",
+    "gulp-mocha" : "2.2.0 "
   }
 }
