--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "url": "https://github.com/episanchez/yeoku/issues"
   },
   "dependencies": {
-    "winston": "2.1.1"
+    "winston": "2.1.1",
+    "app-module-path": "1.0.5"
   },
   "devDependencies": {
     "should": "3.3.1",
