--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yeoku",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "Entity Component System for javascript",
   "license": "MIT",
   "main": "./index.js",
@@ -9,7 +9,11 @@
     "name": "Charlie Quillard",
     "email": "charlie.quillard@epitech.eu"
   },
-  "keywords": ["ecs","yeoku", "entity-component-system"],
+  "keywords": [
+    "ecs",
+    "yeoku",
+    "entity-component-system"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/episanchez/yeoku.git"
